# AI_Engineering_GKE

./: .dockerignore  .gitignore  Dockerfile  cloudbuild.yaml  db.py  k8n.yml  loadDocPymupdf4llm.py  main.py  pyproject.toml  testOCR.py
terraform-config/: .terraform.tfstate.lock.info  main.tf  output.tf  terraform.tfstate  terraform.tfstate.backup  variables.tf
test-app/: values_dev.yaml  values_prod.yaml
test-app/templates/: deployment.yaml
