[project]
name = "testmlops"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "boto3>=1.43.21",
    "easyocr>=1.7.2",
    "fastapi>=0.136.1",
    "markitdown[pdf]>=0.1.5",
    "mysql-connector-python>=9.7.0",
    "pre-commit>=4.6.0",
    "pymupdf4llm>=1.27.2.3",
    "ruff>=0.15.15",
    "uvicorn>=0.47.0",
]
